# FlukaConverter

./: BoostTestHelpers.cmake  CMakeLists.txt  FlukaConverter.sln  FlukaConverter.vcxproj  GUI.cpp  GUI.h  HelpForm.h  README.md  index.html  main.cpp  params.json
gui/: GUI.h  HelpFrame.h  MainFrame.cpp  MainFrame.h  MyForm.h  SuccessFrame.cpp  SuccessFrame.h
include/: Converter.h  Converter.tcc  Exceptions.h  Filter.h  Filter.tcc  ParsedElement.h  PredefinedConverters.h  ReaderPolicy.h  Utils.h  WriterPolicy.h
src/: Converter.cpp  Filter.cpp  ParsedElement.cpp  ReaderPolicy.cpp  WriterPolicy.cpp
test/: testExcelReader.cpp  testUtils.cpp
